deploy/k8s/clusters/edge/ml-cross-cluster-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 30637
---
apiVersion: v1
kind: Endpoints
metadata:
  name: redis
subsets:
  - addresses:
      - ip: 127.0.0.1
    ports:
      - name: redis
        port: 30637
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 30432
---
apiVersion: v1
kind: Endpoints
metadata:
  name: postgres
subsets:
  - addresses:
      - ip: 127.0.0.1
    ports:
      - name: postgres
        port: 30432
